--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
+    "swagger-ui-dist": "^4.6.2",
     "typeorm": "^0.2.45"
   },
   "devDependencies": {
