--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "@midwayjs/axios": "^3.1.2",
     "@midwayjs/bootstrap": "^3.0.0",
+    "@midwayjs/cache": "^3.1.6",
     "@midwayjs/core": "^3.0.0",
+    "@midwayjs/cross-domain": "^3.1.6",
     "@midwayjs/decorator": "^3.0.0",
     "@midwayjs/info": "^3.0.0",
     "@midwayjs/koa": "^3.0.0",
@@ -14,17 +16,22 @@
     "@midwayjs/orm": "^3.1.2",
     "@midwayjs/swagger": "^3.1.2",
     "@midwayjs/validate": "^3.0.0",
+    "@node-rs/jieba": "^1.6.0",
     "@types/lodash": "^4.14.180",
+    "cache-manager": "^3.6.0",
     "class-transformer": "^0.5.1",
     "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
+    "nanoid": "^3.3.1",
     "reflect-metadata": "^0.1.13",
+    "svg-captcha": "^1.4.0",
     "swagger-ui-dist": "^4.6.2",
     "typeorm": "^0.2.45"
   },
   "devDependencies": {
     "@midwayjs/cli": "^1.2.90",
     "@midwayjs/mock": "^3.0.0",
+    "@types/cache-manager": "^3.4.3",
     "@types/jest": "^26.0.10",
     "@types/koa": "^2.13.4",
     "@types/node": "14",
